# TouchAI

./: .gitignore  .prettierignore  .prettierrc  .release-please-manifest.json  CONTRIBUTING.md  README.en.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  community.yml  e2e-smoke.yml  first-interaction.yml  pages.yml  pr-template-check.yml  release-please.yml  release.yml  security.yml  thanks-on-merge.yml  velopack-build.yml
.husky/: pre-commit
apps/desktop/: CHANGELOG.md  package.json  product.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  windows-common-controls.manifest
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/rtk/: manifest.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: browser.rs  built_in_tools.rs  database.rs  mcp.rs  mod.rs  quick_search.rs  shortcut.rs  updater.rs  window.rs
apps/desktop/src-tauri/src/core/: mod.rs  setup.rs
apps/desktop/src-tauri/src/core/browser/: actions.rs  cdp.rs  endpoint.rs  mod.rs  process.rs  runtime.rs  snapshot.rs  types.rs  url_policy.rs
apps/desktop/src-tauri/src/core/built_in_tools/: apply_patch.rs  mod.rs  registry.rs  types.rs
apps/desktop/src-tauri/src/core/database/contract/: seed.rs
apps/desktop/src-tauri/src/core/database/runtime/: import.rs
apps/desktop/src-tauri/src/core/mcp/: client.rs  client_manager.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/core/search/: assets.rs  manager.rs  mod.rs  provider_everything.rs  types.rs
apps/desktop/src-tauri/src/core/search/assets/: cache.rs  codec.rs  win.rs
apps/desktop/src-tauri/src/core/search/manager/: matching.rs  shortcut_target.rs  state.rs  sync.rs
apps/desktop/src-tauri/src/core/system/: assets.rs  logging.rs  mod.rs  paths.rs  shortcut.rs
apps/desktop/src-tauri/src/core/updater/: mod.rs
apps/desktop/src-tauri/src/core/window/: mod.rs  rounded_corners.rs  status_reminder.rs  webview_defaults.rs
apps/desktop/src-tauri/src/core/window/popup/: manager.rs  mod.rs
apps/desktop/src-tauri/src/core/window/search/: bounds.rs  mod.rs  surface.rs
apps/desktop/src-tauri/src/core/window/settings/: mod.rs
apps/desktop/src-tauri/src/core/window/tray/: mod.rs
apps/desktop/src-tauri/src/testing/: mod.rs
apps/desktop/src-tauri/tests/: browser_commands.rs  browser_live_smoke.rs  database_commands.rs  updater_commands.rs  window_commands.rs
apps/desktop/src-tauri/tests/common/: mod.rs
apps/site/: .env.example  astro.config.mjs  package.json
docs/legal/: contributor-license-agreement.md
docs/testing/: testing.md
e2e-tests/: package.json  wdio.conf.js  wdio.paths.js
scripts/: run-rust-command.mjs
scripts/ci/: pr-template-check.d.ts  pr-template-check.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ActionButton.vue  MarkdownContent.vue  appIconMap.ts
src/composables/: useWindowResize.ts
src/config/: searchWindow.ts
src/database/: schema.ts
src/stores/: settings.ts
src/styles/: markdown.css
src/types/: session.ts
tests/ci/: e2e-wdio-paths.test.js  pr-template-check.test.ts
tests/services/: event-service.test.ts  native-service.test.ts
(+711 files in other folders)
